recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:3: error: '(' expected but identifier found.
  avance(length)
  ^