recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
  if
  avance(length)
  droite(angle)
  tree(steps -1,(steps-1)*shrink*length,angle,shrink)
  recule(length)
  
}